--- a/index.html
+++ b/index.html
@@ -41,9 +41,6 @@
 
     <section id="about" class="main-box">
       <section class="first-box">
-        <h1 id="name">
-          <!-- JS working here -->
-        </h1>
         <h4>Front-end Developer</h4>
         <p>Hello, World! Sou estudante de Sistemas de Informação na Universidade Federal de Uberlândia. Sempre achei
           incrível como um simples arquivo <abbr title="HyperText Markup Language">HTML</abbr> em branco poderia se
@@ -63,7 +60,7 @@
         <small>Download do CV</small>
       </section>
       <section class="second-box">
-        <!-- JS working here -->
+        <!-- JS's working here -->
       </section>
     </section>
     <section id="projects" class="my-projects">
