Atualização do curriculo, inclusão de efeito ao realizar o scroll na página e atualização de informações

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
     rel="stylesheet">
   <link rel="stylesheet" href="./css/style.css">
-  <title>.: Cleversonasj | Full Stack Developer :.</title>
+  <title>Full Stack Developer</title>
   <script src="./scripts/script.js" defer></script>
 </head>
 
@@ -41,10 +41,23 @@
 
     <section id="about" class="main-box">
       <section class="first-box">
-        <h4>Full Stack Developer</h4>
-        <p>Sou Desenvolvedor Full Stack Junior e estudante de Sistemas de Informação na UFU &#40;Universidade Federal de Uberlândia&#41;. Sempre achei incrível como um simples arquivo <abbr title="HyperText Markup Language">HTML</abbr> em branco poderia se transformar e resolver tantos problemas com apenas alguns códigos. Tenho conhecimentos em <abbr title="HyperText Markup Language">HTML</abbr>, <abbr title="Cascading Style Sheets">CSS</abbr>, Bootstrap, <abbr title="JavaScript">JS</abbr>, TypeScript, Angular, <abbr title="Hypertext Preprocessor">PHP</abbr>, Laravel e em banco de dados &#40;MySQL&#41;. Além das tecnologias mencionadas, possuo conhecimentos básicos em Java e Linguagem C.</p>
-
-        <p>Deseja falar comigo? <a href="#contact">Clique aqui!</a></p>
+        <h4>Desenvolvedor Full Stack</h4>
+        <p>
+          Sou Desenvolvedor Full Stack apaixonado por tecnologia e comprometido em criar soluções. Possuo habilidades em
+          HTML, CSS, JavaScript, PHP, Laravel, Vue.js, Angular e MySQL.
+        </p>
+        <p>
+          Tenho experiência em correção de bugs, manipulação de banco de dados (MySQL), exportação de dados e trabalho
+          com o paradigma da programação orientada a objetos (POO) e estrutura MVC. Também sou familiarizado com o
+          controle de versionamento utilizando o Git.
+        </p>
+        <p>
+          Tenho conhecimento sobre a metodologia ágil, o que me permite trabalhar de forma colaborativa e eficiente,
+          entregando resultados de qualidade dentro dos prazos estabelecidos.
+        </p>
+        <p>
+          Busco aprimorar constantemente minhas habilidades, conhecimentos e fazer parte de projetos desafiadores.
+        </p>
 
         <a href="docs/cv.pdf" target="_blank"><img src="images/cv.png" alt="CV" width="50" height="50"
             title="Download do CV"></a>
@@ -54,31 +67,43 @@
         <!-- JS's working here -->
       </section>
     </section>
-    <section id="projects" class="my-projects">
+    <section id="projects" class="my-projects hidden_left">
       <h2>Projetos</h2>
       <div id="repositories">
         <!-- JS working here -->
       </div>
     </section>
-    <section id="technologies">
+    <section id="technologies" class="hidden_right">
       <div class="tech-box1">
-        <img src="https://lh3.googleusercontent.com/FCTJV2u4ETqtkvFn0I1fY184UbdpWhqpAyyV6w7732ookhFnbAF_gBaWMNfAw28z_GhVeZmQIY7jbUuDlFEjWWv6ldLe7FvrJg4=w500"
+        <img
+          src="https://camo.githubusercontent.com/a4c584bce1c41271485d28f92aaf9f581b3c88b68ca723b6edfd58b4ba988c2b/68747470733a2f2f63646e2e6472696262626c652e636f6d2f75736572732f313138373833362f73637265656e73686f74732f363533393432392f70726f6772616d65722e676966"
           alt="Full Stack Developer">
       </div>
       <div class="tech-box2">
         <h2>Tecnologias</h2>
-        <p>Tecnologias que utilizo:</p>
-        <a href="https://developer.mozilla.org/pt-BR/docs/Web/HTML" target="_blank"><img src="images/html.jpg" alt="HTML" width="60" height="60"></a>
-        <a href="https://developer.mozilla.org/pt-BR/docs/Web/CSS" target="_blank"><img src="images/css.jpg" alt="CSS" width="60" height="60"></a>
-        <a href="https://getbootstrap.com/" target="_blank"><img src="images/bootstrap.svg" alt="Bootstrap" width="60" height="60"></a>
+        <div>
+          <a href="https://developer.mozilla.org/pt-BR/docs/Web/HTML" target="_blank"><img src="images/html.jpg"
+            alt="HTML" width="50" height="50"></a>
+        <a href="https://developer.mozilla.org/pt-BR/docs/Web/CSS" target="_blank"><img src="images/css.jpg" alt="CSS"
+            width="50" height="50"></a>
+        <a href="https://getbootstrap.com/" target="_blank"><img src="images/bootstrap.svg" alt="Bootstrap" width="50"
+            height="50"></a>
         <br>
-        <a href="https://developer.mozilla.org/pt-BR/docs/Web/JavaScript" target="_blank"><img src="images/js.jpg" alt="JavaScript" width="60" height="60"></a>
-        <a href="https://www.typescriptlang.org/" target="_blank"><img src="images/ts.jpg" alt="TypeScript" width="60" height="60"></a>
-        <a href="https://angular.io/" target="_blank"><img src="images/angular.jpg" alt="Angular" width="60" height="60"></a>
+        <a href="https://developer.mozilla.org/pt-BR/docs/Web/JavaScript" target="_blank"><img src="images/js.jpg"
+            alt="JavaScript" width="50" height="50"></a>
+        <a href="https://www.typescriptlang.org/" target="_blank"><img src="images/ts.jpg" alt="TypeScript" width="50"
+            height="50"></a>
+        <a href="https://vuejs.org/" target="_blank"><img src="images/vuejs.svg" alt="Vue.js" width="50" 
+            height="50"></a>
+        <a href="https://angular.io/" target="_blank"><img src="images/angular.jpg" alt="Angular" width="50"
+            height="50"></a>
         <br>
-        <a href="https://www.php.net/" target="_blank"><img src="images/php.svg" alt="PHP" width="60" height="60"></a>
-        <a href="https://laravel.com/" target="_blank"><img src="images/laravel.svg" alt="Laravel" width="60" height="60"></a>
-        <a href="https://www.mysql.com/" target="_blank"><img src="images/mysql.svg" alt="MySQL" width="60" height="60"></a>
+        <a href="https://www.php.net/" target="_blank"><img src="images/php.svg" alt="PHP" width="50" height="50"></a>
+        <a href="https://laravel.com/" target="_blank"><img src="images/laravel.svg" alt="Laravel" width="50"
+            height="50"></a>
+        <a href="https://www.mysql.com/" target="_blank"><img src="images/mysql.svg" alt="MySQL" width="50"
+            height="50"></a>
+        </div>
       </div>
     </section>
 
@@ -88,10 +113,10 @@
     <a href="#navigation">
       <img class="top" src="images/top.png" alt="Top Image" width="50" height="50">
     </a>
-    
+
   </main>
 
-  <footer id="contact">
+  <footer id="contact" class="hidden_footer">
     <iframe
       src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15096.91264933383!2d-48.25496472099133!3d-18.92129239652862!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94a4501f87c35ef3%3A0xb065080879f5f58b!2sSanta%20M%C3%B4nica%2C%20Uberl%C3%A2ndia%20-%20MG!5e0!3m2!1spt-BR!2sbr!4v1668892129467!5m2!1spt-BR!2sbr"
       width="700" height="300" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
