Ajustando para que os elementos apareçam da esquerda para a direita na transição do scroll

--- a/index.html
+++ b/index.html
@@ -67,13 +67,13 @@
         <!-- JS's working here -->
       </section>
     </section>
-    <section id="projects" class="my-projects hidden_left">
+    <section id="projects" class="my-projects hidden_1">
       <h2>Projetos</h2>
       <div id="repositories">
         <!-- JS working here -->
       </div>
     </section>
-    <section id="technologies" class="hidden_right">
+    <section id="technologies" class="hidden_2">
       <div class="tech-box1">
         <img
           src="https://camo.githubusercontent.com/a4c584bce1c41271485d28f92aaf9f581b3c88b68ca723b6edfd58b4ba988c2b/68747470733a2f2f63646e2e6472696262626c652e636f6d2f75736572732f313138373833362f73637265656e73686f74732f363533393432392f70726f6772616d65722e676966"
@@ -116,7 +116,7 @@
 
   </main>
 
-  <footer id="contact" class="hidden_footer">
+  <footer id="contact" class="hidden_3">
     <iframe
       src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15096.91264933383!2d-48.25496472099133!3d-18.92129239652862!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94a4501f87c35ef3%3A0xb065080879f5f58b!2sSanta%20M%C3%B4nica%2C%20Uberl%C3%A2ndia%20-%20MG!5e0!3m2!1spt-BR!2sbr!4v1668892129467!5m2!1spt-BR!2sbr"
       width="700" height="300" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
