Added options to read my resume in portuguese, spanish and english

--- a/index.html
+++ b/index.html
@@ -41,30 +41,75 @@
 
     <section id="about" class="main-box">
       <section class="first-box">
-        <h4>Desenvolvedor Full Stack</h4>
-        <p>
-          Sou Desenvolvedor Full Stack apaixonado por tecnologia e comprometido em criar soluções. Possuo habilidades em
-          HTML, CSS, JavaScript, PHP, Laravel, Vue.js, Angular e MySQL.
-        </p>
-        <p>
-          Tenho experiência em correção de bugs, manipulação de banco de dados (MySQL), exportação de dados e trabalho
-          com o paradigma da programação orientada a objetos (POO) e estrutura MVC. Também sou familiarizado com o
-          controle de versionamento utilizando o Git.
-        </p>
-        <p>
-          Tenho conhecimento sobre a metodologia ágil, o que me permite trabalhar de forma colaborativa e eficiente,
-          entregando resultados de qualidade dentro dos prazos estabelecidos.
-        </p>
-        <p>
-          Busco aprimorar constantemente minhas habilidades, conhecimentos e fazer parte de projetos desafiadores.
-        </p>
-
-        <a href="docs/cv.pdf" target="_blank"><img src="images/cv.png" alt="CV" width="50" height="50"
-            title="Download do CV"></a>
-        <small>Download do CV</small>
+        <div class="languages">
+          <img src="images/brazil_flag.png" alt="Português" id="pt" width="40px" height="25px">
+          <img src="images/spain_flag.png" alt="Espanhol" id="es" width="40px" height="25px">
+          <img src="images/usa_flag.png" alt="Inglês" id="en" width="40px" height="25px">
+        </div>
+        <div id="ptBox">
+          <h1>Cleverson Junior</h1>
+          <h4>Desenvolvedor Full Stack</h4>
+          <p>
+            Sou apaixonado por tecnologia e comprometido em criar soluções. Possuo habilidades em HTML, CSS, JavaScript, PHP, Laravel, Vue.js, Angular e MySQL.
+          </p>
+          <p>
+            Tenho experiência em desenvolimento de novas funcionalidades, correção de bugs, manipulação de banco de dados (MySQL), exportação de dados. Trabalho
+            com o paradigma de Programação Orientada a Objetos (POO) e estrutura MVC. Também sou familiarizado com o controle de versionamento utilizando o Git.
+          </p>
+          <p>
+            Tenho conhecimento sobre a metodologia ágil, o que me permite trabalhar de forma colaborativa e eficiente, entregando resultados de qualidade dentro dos prazos estabelecidos.
+          </p>
+          <p>
+            Busco aprimorar constantemente minhas habilidades, conhecimentos e fazer parte de projetos desafiadores.
+          </p>
+  
+          <a href="docs/cv_pt.pdf" target="_blank"><img src="images/cv.png" alt="CV" width="50" height="50"
+              title="Download do CV"><small>CV</small></a>
+        </div>
+        <div id="esBox">
+          <h1>Cleverson Junior</h1>
+          <h4>Desarollador Full Stack</h4>
+          <p>
+            Soy un apasionado de la tecnología y comprometido con la creación de soluciones. Tengo habilidades en HTML, CSS, JavaScript, PHP, Laravel, Vue.js, Angular y MySQL.
+          </p>
+          <p>
+            Tengo experiencia en el desarrollo de nuevas funciones, corrección de errores, manipulación de bases de datos (MySQL), exportación de datos. Trabajo
+            con el paradigma de Programación Orientada a Objetos (OOP) y framework MVC. También estoy familiarizado con el control de versiones usando Git.
+          </p>
+          <p>
+            Tengo conocimiento sobre la metodología ágil, lo que me permite trabajar de manera colaborativa y eficiente,
+            entregando resultados de calidad dentro de los plazos establecidos.
+          </p>
+          <p>
+            Busco mejorar constantemente mis habilidades, conocimientos y ser parte de proyectos desafiantes.
+          </p>
+  
+          <a href="docs/cv_es.pdf" target="_blank"><img src="images/cv.png" alt="CV" width="50" height="50"
+              title="Download do CV"><small>CV</small></a>
+        </div>
+        <div id="enBox">
+          <h1>Cleverson Junior</h1>
+          <h4>Full Stack Developer</h4>
+          <p>
+            I am passionate about technology and committed to creating solutions. I have skills in HTML, CSS, JavaScript, PHP, Laravel, Vue.js, Angular and MySQL.
+          </p>
+          <p>
+            I have experience in developing new features, bug fixing, database manipulation (MySQL), data export. I work
+            with the Object Oriented Programming (OOP) and MVC framework. I'm also familiar with versioning control using Git.
+          </p>
+          <p>
+            I have knowledge about the agile methodology, which allows me to work collaboratively and efficiently,
+            delivering quality results within established deadlines.
+          </p>
+          <p>
+            I seek to constantly improve my skills, knowledge and be part of challenging projects.
+          </p>
+  
+          <a href="docs/resume.pdf" target="_blank"><img src="images/cv.png" alt="CV" width="50" height="50"
+              title="Download do CV"><small>Resume</small></a>
+        </div>
       </section>
       <section class="second-box">
-        <!-- JS's working here -->
       </section>
     </section>
     <section id="projects" class="my-projects hidden_1">
