--- a/index.html
+++ b/index.html
@@ -38,9 +38,8 @@
   </nav>
 
   <main>
-
-    <section id="about" class="main-box">
-      <section class="first-box">
+    <div id="about" class="main-box">
+      <div class="first-box">
         <div class="languages">
           <img src="images/brazil_flag.png" alt="Português" id="pt" width="40px" height="25px">
           <img src="images/spain_flag.png" alt="Espanhol" id="es" width="40px" height="25px">
@@ -49,108 +48,68 @@
         <div id="ptBox">
           <h1>Cleverson Junior</h1>
           <h4>Desenvolvedor Full Stack</h4>
-          <p>
-            Sou apaixonado por tecnologia e comprometido em criar soluções. Possuo habilidades em HTML, CSS, JavaScript, PHP, Laravel, Vue.js, Angular e MySQL.
-          </p>
-          <p>
-            Tenho experiência em desenvolimento de novas funcionalidades, correção de bugs, manipulação de banco de dados (MySQL), exportação de dados. Trabalho
-            com o paradigma de Programação Orientada a Objetos (POO) e estrutura MVC. Também sou familiarizado com o controle de versionamento utilizando o Git.
-          </p>
-          <p>
-            Tenho conhecimento sobre a metodologia ágil, o que me permite trabalhar de forma colaborativa e eficiente, entregando resultados de qualidade dentro dos prazos estabelecidos.
-          </p>
-          <p>
-            Busco aprimorar constantemente minhas habilidades, conhecimentos e fazer parte de projetos desafiadores.
-          </p>
-  
-          <a href="docs/cv_pt.pdf" target="_blank"><img src="images/cv.png" alt="CV" width="50" height="50"
-              title="Download do CV"><small>CV</small></a>
+          <p>Com uma extensa trajetória profissional, aprendi a valorizar o trabalho em equipe, sempre focado na construção de relacionamentos sólidos, o que contribuiu para alcançar minhas metas.</p>
+          <p>Há 2 anos, mergulhei no universo da tecnologia, materializando meu desejo de criar soluções. Possuo habilidades nas linguagens de programação JavaScript, com o uso do Framework Vue.js, e PHP, com o uso do Framework Laravel.</p><p>Ao longo dessa jornada tecnológica, acumulei experiência no desenvolvimento de soluções, garantindo o funcionamento correto das aplicações por meio da resolução eficiente de bugs. O meu dia a dia envolve manipulação de bancos de dados (MySQL) e controle de versionamento com o uso do GIT. Aplico o paradigma de Programação Orientada a Objetos (POO), possuo conhecimentos de estrutura MVC, consumo de APIs e sigo as metodologias ágeis para garantir eficácia no desenvolvimento.</p>
+          <p>A minha busca por crescimento me conduziu a encarar cada desafio como uma valiosa oportunidade de aprendizado.</p>
+          <p>Não me limito a linguagens, estou sempre em busca de novos conhecimentos, motivo pelo qual estou me formando em Análise e Desenvolvimento de Sistemas.</p>
+          <p>Atuo como Desenvolvedor Full Stack, estou pronto para enfrentar novos desafios com muita dedicação e oferecer um excelente trabalho para qualquer equipe e projeto de TI.</p>
         </div>
         <div id="esBox">
           <h1>Cleverson Junior</h1>
           <h4>Desarollador Full Stack</h4>
-          <p>
-            Soy un apasionado de la tecnología y comprometido con la creación de soluciones. Tengo habilidades en HTML, CSS, JavaScript, PHP, Laravel, Vue.js, Angular y MySQL.
-          </p>
-          <p>
-            Tengo experiencia en el desarrollo de nuevas funciones, corrección de errores, manipulación de bases de datos (MySQL), exportación de datos. Trabajo
-            con el paradigma de Programación Orientada a Objetos (OOP) y framework MVC. También estoy familiarizado con el control de versiones usando Git.
-          </p>
-          <p>
-            Tengo conocimiento sobre la metodología ágil, lo que me permite trabajar de manera colaborativa y eficiente,
-            entregando resultados de calidad dentro de los plazos establecidos.
-          </p>
-          <p>
-            Busco mejorar constantemente mis habilidades, conocimientos y ser parte de proyectos desafiantes.
-          </p>
-  
-          <a href="docs/cv_es.pdf" target="_blank"><img src="images/cv.png" alt="CV" width="50" height="50"
-              title="Download do CV"><small>CV</small></a>
+          <p>Con una amplia trayectoria profesional, he aprendido a valorar el trabajo en equipo, siempre enfocado en la construcción de relaciones sólidas, lo que ha contribuido a alcanzar mis metas.</p>
+          <p>Hace 2 años, me sumergí en el universo de la tecnología, materializando mi deseo de crear soluciones. Poseo habilidades en los lenguajes de programación JavaScript, con el uso del Framework Vue.js, y PHP, con el uso del Framework Laravel.</p>
+          <p>A lo largo de este viaje tecnológico, he acumulado experiencia en el desarrollo de soluciones, garantizando el correcto funcionamiento de las aplicaciones mediante la resolución eficiente de errores. Mi día a día implica la manipulación de bases de datos (MySQL) y el control de versiones con el uso de GIT. Aplico el paradigma de Programación Orientada a Objetos (POO), tengo conocimientos de la estructura MVC, consumo de APIs y sigo las metodologías ágiles para garantizar la eficacia en el desarrollo.</p>
+          <p>Mi búsqueda de crecimiento me ha llevado a enfrentar cada desafío como una valiosa oportunidad de aprendizaje.</p>
+          <p>No me limito a los lenguajes, siempre estoy en busca de nuevos conocimientos, razón por la cual estoy graduándome en Análisis y Desarrollo de Sistemas.</p>
+          <p>Trabajo como Desarrollador Full Stack, estoy listo para enfrentar nuevos desafíos con mucha dedicación y ofrecer un excelente trabajo para cualquier equipo y proyecto de TI.</p>
         </div>
         <div id="enBox">
           <h1>Cleverson Junior</h1>
           <h4>Full Stack Developer</h4>
-          <p>
-            I am passionate about technology and committed to creating solutions. I have skills in HTML, CSS, JavaScript, PHP, Laravel, Vue.js, Angular and MySQL.
-          </p>
-          <p>
-            I have experience in developing new features, bug fixing, database manipulation (MySQL), data export. I work
-            with the Object Oriented Programming (OOP) and MVC framework. I'm also familiar with versioning control using Git.
-          </p>
-          <p>
-            I have knowledge about the agile methodology, which allows me to work collaboratively and efficiently,
-            delivering quality results within established deadlines.
-          </p>
-          <p>
-            I seek to constantly improve my skills, knowledge and be part of challenging projects.
-          </p>
-  
-          <a href="docs/resume.pdf" target="_blank"><img src="images/cv.png" alt="CV" width="50" height="50"
-              title="Download do CV"><small>Resume</small></a>
+          <p>With an extensive professional background, I have learned to value teamwork, always focused on building strong relationships, which has contributed to achieving my goals.</p>
+          <p>Two years ago, I immersed myself in the world of technology, realizing my desire to create solutions. I possess skills in programming languages such as JavaScript, using the Vue.js framework, and PHP, using the Laravel framework.</p>
+          <p>Throughout this technological journey, I have accumulated experience in developing solutions, ensuring the proper functioning of applications through efficient bug resolution. My day-to-day involves database manipulation (MySQL) and version control using GIT. I apply the Object-Oriented Programming (OOP) paradigm, have knowledge of MVC structure, API consumption, and follow agile methodologies to ensure effectiveness in development.</p>
+          <p>My quest for growth has led me to view each challenge as a valuable learning opportunity.</p>
+          <p>I do not limit myself to languages; I am always seeking new knowledge, which is why I am graduating in Systems Analysis and Development.</p>
+          <p>I work as a Full Stack Developer, ready to face new challenges with dedication and deliver excellent work for any IT team and project.</p>
         </div>
-      </section>
-      <section class="second-box">
-      </section>
-    </section>
-    <section id="projects" class="my-projects hidden_1">
+      </div>
+      <div class="second-box">
+      </div>
+    </div>
+    <div id="projects" class="my-projects hidden_1">
       <h2>Projetos</h2>
       <div id="repositories">
         <!-- JS working here -->
       </div>
-    </section>
-    <section id="technologies" class="hidden_2">
-      <div class="tech-box1">
-        <img
-          src="https://camo.githubusercontent.com/a4c584bce1c41271485d28f92aaf9f581b3c88b68ca723b6edfd58b4ba988c2b/68747470733a2f2f63646e2e6472696262626c652e636f6d2f75736572732f313138373833362f73637265656e73686f74732f363533393432392f70726f6772616d65722e676966"
-          alt="Full Stack Developer">
-      </div>
-      <div class="tech-box2">
+    </div>
+    <div id="technologies" class="hidden_2">
+      <div class="tech-box">
         <h2>Tecnologias</h2>
         <div>
           <a href="https://developer.mozilla.org/pt-BR/docs/Web/HTML" target="_blank"><img src="images/html.jpg"
             alt="HTML" width="50" height="50"></a>
-        <a href="https://developer.mozilla.org/pt-BR/docs/Web/CSS" target="_blank"><img src="images/css.jpg" alt="CSS"
+          <a href="https://developer.mozilla.org/pt-BR/docs/Web/CSS" target="_blank"><img src="images/css.jpg" alt="CSS"
             width="50" height="50"></a>
-        <a href="https://getbootstrap.com/" target="_blank"><img src="images/bootstrap.svg" alt="Bootstrap" width="50"
+          <a href="https://getbootstrap.com/" target="_blank"><img src="images/bootstrap.svg" alt="Bootstrap" width="50"
             height="50"></a>
-        <br>
-        <a href="https://developer.mozilla.org/pt-BR/docs/Web/JavaScript" target="_blank"><img src="images/js.jpg"
+          <a href="https://developer.mozilla.org/pt-BR/docs/Web/JavaScript" target="_blank"><img src="images/js.jpg"
             alt="JavaScript" width="50" height="50"></a>
-        <a href="https://www.typescriptlang.org/" target="_blank"><img src="images/ts.jpg" alt="TypeScript" width="50"
+          <a href="https://www.typescriptlang.org/" target="_blank"><img src="images/ts.jpg" alt="TypeScript" width="50"
             height="50"></a>
-        <a href="https://vuejs.org/" target="_blank"><img src="images/vuejs.svg" alt="Vue.js" width="50" 
+          <a href="https://vuejs.org/" target="_blank"><img src="images/vuejs.svg" alt="Vue.js" width="50" 
             height="50"></a>
-        <a href="https://angular.io/" target="_blank"><img src="images/angular.jpg" alt="Angular" width="50"
+          <a href="https://angular.io/" target="_blank"><img src="images/angular.jpg" alt="Angular" width="50"
             height="50"></a>
-        <br>
-        <a href="https://www.php.net/" target="_blank"><img src="images/php.svg" alt="PHP" width="50" height="50"></a>
-        <a href="https://laravel.com/" target="_blank"><img src="images/laravel.svg" alt="Laravel" width="50"
+          <a href="https://www.php.net/" target="_blank"><img src="images/php.svg" alt="PHP" width="50" height="50"></a>
+          <a href="https://laravel.com/" target="_blank"><img src="images/laravel.svg" alt="Laravel" width="50"
             height="50"></a>
-        <a href="https://www.mysql.com/" target="_blank"><img src="images/mysql.svg" alt="MySQL" width="50"
+          <a href="https://www.mysql.com/" target="_blank"><img src="images/mysql.svg" alt="MySQL" width="50"
             height="50"></a>
         </div>
-      </div>
-    </section>
+      </div>              
+    </div>
 
     <a href="https://wa.me/5534992664009" target="_blank">
       <img class="whatsapp" src="images/whatsapp.png" alt="WhatsApp Image" width="50" height="50">
@@ -158,24 +117,21 @@
     <a href="#navigation">
       <img class="top" src="images/top.png" alt="Top Image" width="50" height="50">
     </a>
-
   </main>
 
   <footer id="contact" class="hidden_3">
-    <iframe
-      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15096.91264933383!2d-48.25496472099133!3d-18.92129239652862!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94a4501f87c35ef3%3A0xb065080879f5f58b!2sSanta%20M%C3%B4nica%2C%20Uberl%C3%A2ndia%20-%20MG!5e0!3m2!1spt-BR!2sbr!4v1668892129467!5m2!1spt-BR!2sbr"
-      width="700" height="300" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-
-    <a href="tel:034-99266-4009"><img src="images/telephone-call.png" alt="Telefone" title="&#40;34&#41; 99266-4009"
+    <div class="badge-base LI-profile-badge" data-locale="pt_BR" data-size="large" data-theme="dark" data-type="HORIZONTAL" data-vanity="cleversonasj" data-version="v1"><a class="badge-base__link LI-simple-link" href="https://br.linkedin.com/in/cleversonasj?trk=profile-badge"></a></div>
+    <div class="contatos">
+      <a href="tel:034-99266-4009"><img src="images/telephone-call.png" alt="Telefone" title="&#40;34&#41; 99266-4009"
         width="40" height="40"></a>
-    <a href="mailto:clvsjr@hotmail.com"><img src="images/email.png" alt="E-mail" title="clvsjr@hotmail.com" width="40"
+      <a href="mailto:clvsjr@hotmail.com"><img src="images/email.png" alt="E-mail" title="clvsjr@hotmail.com" width="40"
         height="40"></a>
-    <a href="https://www.linkedin.com/in/cleversonasj/" target="_blank"><img src="images/linkedin.png" alt="LinkedIn"
-        width="40" height="40"></a>
-    <a href="https://github.com/cleversonasj" target="_blank"><img src="images/github.png" alt="GitHub" width="40"
+      <a href="https://github.com/cleversonasj" target="_blank"><img src="images/github.png" alt="GitHub" width="40"
         height="40"></a>
-    <h4>Copyright 2022 &#169; CASJ - Todos os direitos reservados</h4>
+    </div>
+    <h3>Copyright 2022 &#169; CASJ - Todos os direitos reservados</h3>
   </footer>
+  <script src="https://platform.linkedin.com/badges/js/profile.js" async defer type="text/javascript"></script>
 </body>
 
 </html>
