--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           <p>Two years ago, I immersed myself in the world of technology, realizing my desire to create solutions. I possess skills in programming languages such as JavaScript, using the Vue.js framework, and PHP, using the Laravel framework.</p>
           <p>Throughout this technological journey, I have accumulated experience in developing solutions, ensuring the proper functioning of applications through efficient bug resolution. My day-to-day involves database manipulation (MySQL) and version control using GIT. I apply the Object-Oriented Programming (OOP) paradigm, have knowledge of MVC structure, API consumption, and follow agile methodologies to ensure effectiveness in development.</p>
           <p>My quest for growth has led me to view each challenge as a valuable learning opportunity.</p>
-          <p>I do not limit myself to languages; I am always seeking new knowledge, which is why I am graduating in Systems Analysis and Development.</p>
+          <p>I do not limit myself to languages, I am always seeking new knowledge, which is why I am graduating in Systems Analysis and Development.</p>
           <p>I work as a Full Stack Developer, ready to face new challenges with dedication and deliver excellent work for any IT team and project.</p>
         </div>
       </div>
