Inclusão de animações e alteração básica de alguns estilos.

--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
 
 <body>
 
+  <div class="welcome">
+    <img class="animation" src="./images/animation.gif" alt="Animação">
+  </div>
+
   <nav id="navigation">
     <div class="mobile-menu">
       <div class="line1"></div>
@@ -45,7 +49,7 @@
           <img src="images/spain_flag.png" alt="Espanhol" id="es" width="40px" height="25px">
           <img src="images/usa_flag.png" alt="Inglês" id="en" width="40px" height="25px">
         </div>
-        <div id="ptBox">
+        <div id="ptBox" class="active">
           <h1>Cleverson Junior</h1>
           <h4>Desenvolvedor Full Stack</h4>
           <p>Com uma extensa trajetória profissional, aprendi a valorizar o trabalho em equipe, sempre focado na construção de relacionamentos sólidos, o que contribuiu para alcançar minhas metas.</p>
@@ -131,6 +135,10 @@
     </div>
     <h3>Copyright 2022 &#169; CASJ - Todos os direitos reservados</h3>
   </footer>
+  <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
+  <script src="./scripts/navbar.js"></script>
+  <script src="./scripts/profile.js"></script>
+  <script src="./scripts/events.js"></script>
   <script src="https://platform.linkedin.com/badges/js/profile.js" async defer type="text/javascript"></script>
 </body>
 
