Inclusão das tags meta do meu portfólio.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Portfólio do Cleverson Junior &#40;Full Stack Developer&#41;">
+  <meta property="og:title" content="Portfólio">
+  <meta property="og:description" content="Página com informações e projetos que criei ao começar a desenvolver.">
+  <meta property="og:image" content="https://avatars.githubusercontent.com/u/75210280?v=4">
+  <meta property="og:url" content="https://cleversonasj.github.io/home/">
+  <meta property="og:type" content="website">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
