Alteração para deixar colorido apenas a bandeira do idioma selecionado na descrição.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
     rel="stylesheet">
   <link rel="stylesheet" href="./css/style.css">
   <title>Full Stack Developer</title>
-  <script src="./scripts/script.js" defer></script>
 </head>
 
 <body>
@@ -50,8 +49,8 @@
       <div class="first-box">
         <div class="languages">
           <img src="images/brazil_flag.png" alt="Português" id="pt" width="40px" height="25px">
-          <img src="images/spain_flag.png" alt="Espanhol" id="es" width="40px" height="25px">
-          <img src="images/usa_flag.png" alt="Inglês" id="en" width="40px" height="25px">
+          <img class="unselected" src="images/spain_flag.png" alt="Espanhol" id="es" width="40px" height="25px">
+          <img class="unselected" src="images/usa_flag.png" alt="Inglês" id="en" width="40px" height="25px">
         </div>
         <div id="ptBox" class="active">
           <h1>Cleverson Junior</h1>
