Set my page in building mode.

--- a/index.html
+++ b/index.html
@@ -1,148 +1,30 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
-
+<html lang="pt-br">
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta property="og:title" content="Portfólio">
-  <meta property="og:description" content="Página com informações e projetos que criei ao começar a desenvolver.">
-  <meta property="og:image" content="https://avatars.githubusercontent.com/u/75210280?v=4">
-  <meta property="og:url" content="https://cleversonasj.github.io/home/">
-  <meta property="og:type" content="website">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
-    rel="stylesheet">
-  <link rel="stylesheet" href="./css/style.css">
-  <title>Full Stack Developer</title>
+  <title>Página em Construção</title>
+  <link rel="stylesheet" href="./assets/style/style.css">
 </head>
-
 <body>
+    <div class="container">
+        <h1>Em Construção</h1>
+        <p>Estou trabalhando em um novo portfólio e em breve você poderá conhecer mais sobre os meus projetos e habilidades!</p>
 
-  <div class="welcome">
-    <img class="animation" src="./images/animation.gif" alt="Animação">
-  </div>
+        <div class="animation-container">
+            <div class="circle"></div>
+            <div class="circle"></div>
+            <div class="circle"></div>
+        </div>
 
-  <nav id="navigation">
-    <div class="mobile-menu">
-      <div class="line1"></div>
-      <div class="line2"></div>
-      <div class="line3"></div>
+        <footer>
+            &copy; 2024 Desenvolvido por Cleverson Junior
+            <br>
+            <br>
+            <a href="https://www.linkedin.com/in/cleversonasj/" class="linkedin-icon" target="_blank">
+                <img src="./assets/img/icon.svg" alt="LinkedIn Icon">
+            </a>
+        </footer>
     </div>
-    <ul class="nav-list">
-      <li>
-        <a href="#about">Sobre</a>
-      </li>
-      <li>
-        <a href="#projects">Projetos</a>
-      </li>
-      <li>
-        <a href="#contact">Contato</a>
-      </li>
-    </ul>
-  </nav>
-
-  <main>
-    <div id="about" class="main-box">
-      <div class="first-box">
-        <div class="languages">
-          <img src="images/brazil_flag.png" alt="Português" id="pt" width="40px" height="25px">
-          <img class="unselected" src="images/spain_flag.png" alt="Espanhol" id="es" width="40px" height="25px">
-          <img class="unselected" src="images/usa_flag.png" alt="Inglês" id="en" width="40px" height="25px">
-        </div>
-        <div id="ptBox" class="active">
-          <h1>Cleverson Junior</h1>
-          <h4>Desenvolvedor Full Stack</h4>
-          <p>Com uma extensa trajetória profissional, aprendi a valorizar o trabalho em equipe, sempre focado na construção de relacionamentos sólidos, o que contribuiu para alcançar minhas metas.</p>
-          <p>Há 2 anos, mergulhei no universo da tecnologia, materializando meu desejo de criar soluções. Possuo habilidades nas linguagens de programação JavaScript, com o uso do Framework Vue.js, e PHP, com o uso do Framework Laravel.</p><p>Ao longo dessa jornada tecnológica, acumulei experiência no desenvolvimento de soluções, garantindo o funcionamento correto das aplicações por meio da resolução eficiente de bugs. O meu dia a dia envolve manipulação de bancos de dados (MySQL) e controle de versionamento com o uso do GIT. Aplico o paradigma de Programação Orientada a Objetos (POO), possuo conhecimentos de estrutura MVC, consumo de APIs e sigo as metodologias ágeis para garantir eficácia no desenvolvimento.</p>
-          <p>A minha busca por crescimento me conduziu a encarar cada desafio como uma valiosa oportunidade de aprendizado.</p>
-          <p>Não me limito a linguagens, estou sempre em busca de novos conhecimentos, motivo pelo qual estou me formando em Análise e Desenvolvimento de Sistemas.</p>
-          <p>Atuo como Desenvolvedor Full Stack, estou pronto para enfrentar novos desafios com muita dedicação e oferecer um excelente trabalho para qualquer equipe e projeto de TI.</p>
-        </div>
-        <div id="esBox">
-          <h1>Cleverson Junior</h1>
-          <h4>Desarollador Full Stack</h4>
-          <p>Con una amplia trayectoria profesional, he aprendido a valorar el trabajo en equipo, siempre enfocado en la construcción de relaciones sólidas, lo que ha contribuido a alcanzar mis metas.</p>
-          <p>Hace 2 años, me sumergí en el universo de la tecnología, materializando mi deseo de crear soluciones. Poseo habilidades en los lenguajes de programación JavaScript, con el uso del Framework Vue.js, y PHP, con el uso del Framework Laravel.</p>
-          <p>A lo largo de este viaje tecnológico, he acumulado experiencia en el desarrollo de soluciones, garantizando el correcto funcionamiento de las aplicaciones mediante la resolución eficiente de errores. Mi día a día implica la manipulación de bases de datos (MySQL) y el control de versiones con el uso de GIT. Aplico el paradigma de Programación Orientada a Objetos (POO), tengo conocimientos de la estructura MVC, consumo de APIs y sigo las metodologías ágiles para garantizar la eficacia en el desarrollo.</p>
-          <p>Mi búsqueda de crecimiento me ha llevado a enfrentar cada desafío como una valiosa oportunidad de aprendizaje.</p>
-          <p>No me limito a los lenguajes, siempre estoy en busca de nuevos conocimientos, razón por la cual estoy graduándome en Análisis y Desarrollo de Sistemas.</p>
-          <p>Trabajo como Desarrollador Full Stack, estoy listo para enfrentar nuevos desafíos con mucha dedicación y ofrecer un excelente trabajo para cualquier equipo y proyecto de TI.</p>
-        </div>
-        <div id="enBox">
-          <h1>Cleverson Junior</h1>
-          <h4>Full Stack Developer</h4>
-          <p>With an extensive professional background, I have learned to value teamwork, always focused on building strong relationships, which has contributed to achieving my goals.</p>
-          <p>Two years ago, I immersed myself in the world of technology, realizing my desire to create solutions. I possess skills in programming languages such as JavaScript, using the Vue.js framework, and PHP, using the Laravel framework.</p>
-          <p>Throughout this technological journey, I have accumulated experience in developing solutions, ensuring the proper functioning of applications through efficient bug resolution. My day-to-day involves database manipulation (MySQL) and version control using GIT. I apply the Object-Oriented Programming (OOP) paradigm, have knowledge of MVC structure, API consumption, and follow agile methodologies to ensure effectiveness in development.</p>
-          <p>My quest for growth has led me to view each challenge as a valuable learning opportunity.</p>
-          <p>I do not limit myself to languages, I am always seeking new knowledge, which is why I am graduating in Systems Analysis and Development.</p>
-          <p>I work as a Full Stack Developer, ready to face new challenges with dedication and deliver excellent work for any IT team and project.</p>
-        </div>
-      </div>
-      <div class="second-box">
-      </div>
-    </div>
-    <div id="projects" class="my-projects hidden_1">
-      <h2>Projetos</h2>
-      <div id="repositories">
-        <!-- JS working here -->
-      </div>
-    </div>
-    <div id="technologies" class="hidden_2">
-      <div class="tech-box">
-        <h2>Tecnologias</h2>
-        <div>
-          <a href="https://developer.mozilla.org/pt-BR/docs/Web/HTML" target="_blank"><img src="images/html.jpg"
-            alt="HTML" width="50" height="50"></a>
-          <a href="https://developer.mozilla.org/pt-BR/docs/Web/CSS" target="_blank"><img src="images/css.jpg" alt="CSS"
-            width="50" height="50"></a>
-          <a href="https://getbootstrap.com/" target="_blank"><img src="images/bootstrap.svg" alt="Bootstrap" width="50"
-            height="50"></a>
-          <a href="https://developer.mozilla.org/pt-BR/docs/Web/JavaScript" target="_blank"><img src="images/js.jpg"
-            alt="JavaScript" width="50" height="50"></a>
-          <a href="https://www.typescriptlang.org/" target="_blank"><img src="images/ts.jpg" alt="TypeScript" width="50"
-            height="50"></a>
-          <a href="https://vuejs.org/" target="_blank"><img src="images/vuejs.svg" alt="Vue.js" width="50" 
-            height="50"></a>
-          <a href="https://angular.io/" target="_blank"><img src="images/angular.jpg" alt="Angular" width="50"
-            height="50"></a>
-          <a href="https://www.php.net/" target="_blank"><img src="images/php.svg" alt="PHP" width="50" height="50"></a>
-          <a href="https://laravel.com/" target="_blank"><img src="images/laravel.svg" alt="Laravel" width="50"
-            height="50"></a>
-          <a href="https://www.mysql.com/" target="_blank"><img src="images/mysql.svg" alt="MySQL" width="50"
-            height="50"></a>
-        </div>
-      </div>              
-    </div>
-
-    <a href="https://wa.me/5534992664009" target="_blank">
-      <img class="whatsapp" src="images/whatsapp.png" alt="WhatsApp Image" width="50" height="50">
-    </a>
-    <a href="#navigation">
-      <img class="top" src="images/top.png" alt="Top Image" width="50" height="50">
-    </a>
-  </main>
-
-  <footer id="contact" class="hidden_3">
-    <div class="badge-base LI-profile-badge" data-locale="pt_BR" data-size="large" data-theme="dark" data-type="HORIZONTAL" data-vanity="cleversonasj" data-version="v1"><a class="badge-base__link LI-simple-link" href="https://br.linkedin.com/in/cleversonasj?trk=profile-badge"></a></div>
-    <div class="contatos">
-      <a href="tel:034-99266-4009"><img src="images/telephone-call.png" alt="Telefone" title="&#40;34&#41; 99266-4009"
-        width="40" height="40"></a>
-      <a href="mailto:clvsjr@hotmail.com"><img src="images/email.png" alt="E-mail" title="clvsjr@hotmail.com" width="40"
-        height="40"></a>
-      <a href="https://github.com/cleversonasj" target="_blank"><img src="images/github.png" alt="GitHub" width="40"
-        height="40"></a>
-    </div>
-    <h3>Copyright 2022 &#169; CASJ - Todos os direitos reservados</h3>
-  </footer>
-  <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
-  <script src="./scripts/navbar.js"></script>
-  <script src="./scripts/profile.js"></script>
-  <script src="./scripts/events.js"></script>
-  <script src="https://platform.linkedin.com/badges/js/profile.js" async defer type="text/javascript"></script>
 </body>
-
 </html>
